--- a/drehendz/src/app/app.component.html
+++ b/drehendz/src/app/app.component.html
@@ -1,2 +1,41 @@
 
+<div class ="container-fluid" [ngStyle]=" {'background-color': themeBackgroundColor} ">
+
+<header>
+
+   <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+       <ul class="navbar-nav mr-auto">
+           <li class="nav-item">
+               <a class="nav-link active" href="http://localhost:4200/home" routerlink="home">Home</a>
+           </li>
+           <li class="nav-item">
+               <a class="nav-link" href="http://localhost:4200/about" routerlink="about">About</a>
+           </li>
+
+         <li class="nav-item">
+<a class="nav-link" href="http://localhost:4200/products" routerlink="products">Products</a>
+
+         </li>  
+       </ul>
+   </nav>
+</header>
+<br />
+
 <router-outlet></router-outlet>
+<br />
+<footer>
+  
+
+    <div class="row">
+        <div class="col-md-6 offset-md-5">
+            <p> All rights reserved @ 2019 drehendz </p>
+        </div>
+    </div>
+
+</footer>
+
+</div>
+
+
+
+
