--- a/drehendz/src/app/about/about.component.html
+++ b/drehendz/src/app/about/about.component.html
@@ -3,4 +3,20 @@
 <p class="lead">Developer: Dwayne Mclaren</p>
 </div>
 
+<div class="card">
+
+    <div class="card-head">
+         <h2> Our Mission</h2>
+
+
+
+
+    </div>
+
+
+
+
+
+</div>
+
 <router-outlet></router-outlet>
