--- a/drehendz/src/app/app.component.html
+++ b/drehendz/src/app/app.component.html
@@ -23,12 +23,26 @@
 
 <router-outlet></router-outlet>
 <br />
-<footer>
+<footer class="border-top">
+  <div class="quicklinks">
+      <div class="container">
+          <div class="row">
+              <div class="col-md-6">
+                  <h6>Stay Connected</h6>
+                  <a href="https://www.instagram.com/">Instagram</a>
+              </div>
+          </div>
+      </div>
+  </div>
+
   
 
     <div class="row">
-        <div class="col-md-6 offset-md-5">
-            <p> All rights reserved @ 2019 drehendz </p>
+        <div class="col-md-6 offset-md-3">
+          <p>
+               Copyrights &copy; 2019 drehendz. All Rights Reserved.
+               <a href="">User Agreement</a>
+            </p>
         </div>
     </div>
 
