add slider to home

--- a/drehendz/src/app/home/home.component.html
+++ b/drehendz/src/app/home/home.component.html
@@ -1,10 +1,27 @@
-<div class="row">
-    <div class="col-md-2"></div>
+<div class="container">
 
-    <div class="col-md-6">
+<div id="carousel-example-2" class="carousel slide carousel-fade " data-ride="carousel">
+
+    <ol class="carousel-indicators">
+     <li data-target="#carousel-example-2" data-slide-to="0" class="active"></li>
+     <li data-target="#carousel-example-2" data-slide-to="1"></li> 
+
+    </ol>
+ <div class="carousel-inner" role = "listbox">
+<div class="carousel-item active">
+    <div class="view">
+        <img class="d-block w-100" src="../../assets/banner_img/beachside banner.jpg" alt="first-slide">
+        <div class="mask rgba-black-light"></div>
+    </div>
+    <div class="carousel-caption">
+        <h3 class="h3-responsive"> Beachwear </h3>
+        <p>Explore Swimwear find your passion</p>
 
     </div>
+</div>
+ </div>
+</div>
 
-    <div class="col-md-4">
-    </div>
+<br>
+<app-products></app-products>
 </div>
