--- a/drehendz/src/app/products/products.component.html
+++ b/drehendz/src/app/products/products.component.html
@@ -25,7 +25,7 @@
    <li class=" item">
 
       <div class="card">
-       <img class="card-img-top" src="rhinestone1.jpg/iClouddrive/Desktop" >
+       <img class="card-img-top" src="../../assets/img/rhinestone1.jpg" >
        <div class="card-body">
            
        <h5 class="card-title">  {{item.name}}  </h5>
