update home page carousel

--- a/drehendz/src/app/home/home.component.html
+++ b/drehendz/src/app/home/home.component.html
@@ -5,7 +5,7 @@
     <ol class="carousel-indicators">
      <li data-target="#carousel-example-2" data-slide-to="0" class="active"></li>
      <li data-target="#carousel-example-2" data-slide-to="1"></li> 
-
+     <li data-target="#carousel-example-2" data-slide-to="2"></li>
     </ol>
  <div class="carousel-inner" role = "listbox">
 <div class="carousel-item active">
@@ -19,7 +19,37 @@
 
     </div>
 </div>
+  <div class="carousel-item">
+
+   <div class="view">
+       <img class="d-bloc w-100" src="" alt="Third slide">
+      <div class="mask rgba-black-slight"></div>
+  </div>
+  <div class="carousel-caption">
+      <h3 class="h3-responsive">Bikini</h3>
+      <p>sexy bikini mesh and cover ups</p>
+  </div>
+
+  <div class="carousel-item">
+
+  <div class="view">
+    
+       <img class="d-block w-100" src="" alt="Third slide">
+       <div class="mask rgba-black-slight"></div>
+
+  </div>
+
+  <div class="carousel-caption">
+
+    <h3 class="h3-responsive"> tracksuit </h3>
+    <p>New menswear shirt and shorts</p>
+  </div>
+  </div>
  </div>
+
+ <a class=" carousel-control-prev" href="#carousel-example-2" role="button" data-slide = "prev">
+     <span></span>
+ </a>
 </div>
 
 <br>
