--- a/drehendz/src/app/home/home.component.html
+++ b/drehendz/src/app/home/home.component.html
@@ -48,8 +48,15 @@
  </div>
 
  <a class=" carousel-control-prev" href="#carousel-example-2" role="button" data-slide = "prev">
-     <span></span>
+     <span class="carousel-control-prev-icon" aria-hidden="true">Previous</span>
+     
  </a>
+<a>
+ <span class="carousel-control-next" href="#carousel-example-2" role="button" data-slide="prev">
+     <span class="carousel-control-next-icon" aria-hidden="true"></span>
+     <span class="sr-only">Next</span>
+ </span>
+</a> 
 </div>
 
 <br>
