added image to slider

--- a/drehendz/src/app/home/home.component.html
+++ b/drehendz/src/app/home/home.component.html
@@ -10,7 +10,7 @@
  <div class="carousel-inner" role = "listbox">
 <div class="carousel-item active">
     <div class="view">
-        <img class="d-block w-100" src="../../assets/banner_img/beachside banner.jpg" alt="first-slide">
+        <img class="d-block w-100" src="../../app/banner_img/img resize.jpg" alt="first-slide">
         <div class="mask rgba-black-light"></div>
     </div>
     <div class="carousel-caption">
