--- a/drehendz/src/app/home/home.component.html
+++ b/drehendz/src/app/home/home.component.html
@@ -1,64 +1,43 @@
+
+<!--carousel-->
 <div class="container">
-
-<div id="carousel-example-2" class="carousel slide carousel-fade " data-ride="carousel">
-
+  <!--carousel Wrapper-->
+  <div id="carousel-example-2" data-slide-to="0" class="carousel-slide carousel-fade" data-ride="carousel">
+      <!--indicators-->
     <ol class="carousel-indicators">
-     <li data-target="#carousel-example-2" data-slide-to="0" class="active"></li>
-     <li data-target="#carousel-example-2" data-slide-to="1"></li> 
-     <li data-target="#carousel-example-2" data-slide-to="2"></li>
-    </ol>
- <div class="carousel-inner" role = "listbox">
-<div class="carousel-item active">
-    <div class="view">
-        <img class="d-block w-100" src="../../app/banner_img/img resize.jpg" alt="first-slide">
-        <div class="mask rgba-black-light"></div>
+        <li  data-target="#carousel-example-2" data-slide-to="0" class="active"></li>
+    </ol>  
+   <!--/.indicators-->
+   <!--Slides-->
+   <div class="carousel-inner" role="listbox">
+    <div class="carousel-item active">
+        <div class="view">
+            <img class="d-block w-100" src="../../app/banner_img/beach.jpg" alt="First silde">
+            <div class="mask rgba-black-light"></div>
+        </div>
+        <div class="carousel-caption">
+            <h3 class="h3-responsive"> 
+                Long Sleeve Blouse
+            </h3>
+            <p>Explore your passsion with an  aunthentic feel</p>
+        </div>
     </div>
-    <div class="carousel-caption">
-        <h3 class="h3-responsive"> Beachwear </h3>
-        <p>Explore Swimwear find your passion</p>
 
-    </div>
-</div>
-  <div class="carousel-item">
-
-   <div class="view">
-       <img class="d-bloc w-100" src="" alt="Third slide">
-      <div class="mask rgba-black-slight"></div>
-  </div>
-  <div class="carousel-caption">
-      <h3 class="h3-responsive">Bikini</h3>
-      <p>sexy bikini mesh and cover ups</p>
-  </div>
-
-  <div class="carousel-item">
-
-  <div class="view">
-    
-       <img class="d-block w-100" src="" alt="Third slide">
-       <div class="mask rgba-black-slight"></div>
+   </div>
 
   </div>
 
-  <div class="carousel-caption">
 
-    <h3 class="h3-responsive"> tracksuit </h3>
-    <p>New menswear shirt and shorts</p>
-  </div>
-  </div>
- </div>
 
- <a class=" carousel-control-prev" href="#carousel-example-2" role="button" data-slide = "prev">
-     <span class="carousel-control-prev-icon" aria-hidden="true">Previous</span>
-     
- </a>
-<a>
- <span class="carousel-control-next" href="#carousel-example-2" role="button" data-slide="prev">
-     <span class="carousel-control-next-icon" aria-hidden="true"></span>
-     <span class="sr-only">Next</span>
- </span>
-</a> 
-</div>
 
-<br>
-<app-products></app-products>
+
+
+
+
+
+
+
+
+
+
 </div>
