--- a/drehendz/src/app/home/home.component.html
+++ b/drehendz/src/app/home/home.component.html
@@ -12,32 +12,47 @@
    <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
         <div class="view">
-            <img class="d-block w-100" src="../../app/banner_img/beach.jpg" alt="First silde">
+            <img class="d-block w-100" src="../../assets/banner_img/beach-sunset-silhouettes resize fit best.jpg" alt="First silde">
             <div class="mask rgba-black-light"></div>
         </div>
         <div class="carousel-caption">
             <h3 class="h3-responsive"> 
-                Long Sleeve Blouse
+                Beachwear
             </h3>
-            <p>Explore your passsion with an  aunthentic feel</p>
+            <p>Explore your passsion with an  aunthentic feel chilling on the beach this summer</p>
         </div>
     </div>
-
-   </div>
-
+  <div class="carousel-item">
+      <div class="view">
+          <img class="d-block w-100" src="../../assets/banner_img/clothing-accessories-flatlay resize.jpg" alt="Third slide">
+          <div class="mask rgba-black-slight"></div>
+      </div>
+      <div class="carousel caption">
+          <h3 class="h3-responsive">Clothing</h3>
+          <p>Browse through our collection on unique styles in apparel</p>
+      </div>
   </div>
+  <div class="carousel-item">
+      <div class="view">
+          <img class="d-block w-100" src="../../assets/banner_img/easy-listening resize.jpg" alt="Third slide">
+          <div class="mask rgba-black-slight"></div>
+      </div>
+      <div class="carousel-caption">
+          <h3 class="h3-responsive">Technology</h3>
+          <p>Take a look at the world leading mobile devices and accessories</p>
+      </div>
+  </div>
+</div>
 
+<a class="carousel-canotrol-prev" href="#carousel-example-2" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+</a>
+<a class="carousel-control-next" href="#carousel-example-2" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+</a>
 
-
-
-
-
-
-
-
-
-
-
-
-
+</div>
+<br>
 </div>
