--- a/drehendz/src/app/products/feature-product/feature-product.component.html
+++ b/drehendz/src/app/products/feature-product/feature-product.component.html
@@ -8,7 +8,35 @@
 <div class="col-md-6">
     
 </div>
+<div class="card card-cascade wider">
+<div class="view overlay hm-white-slight">
+    <img src="../../assets/img/rhinestone1 resize" class="img-fluid" alt="" width="360px" height="640px">
+    <a>
+        <div class="mask waves-effect waves-light" mdbRippleRadius></div>
+    </a>
+</div>
 
+<div class="card-body text-center no-padding">
+    <a href="" class="text-muted">
+        <h5>Swimwear</h5>
+    </a>
+    <h5 class="card title">
+        <strong>
+           Mesh Rhinestone
+        </strong>
+    </h5>
+    <p class="card-text"> Two piece Mesh Rhinestone</p>
+
+    <div class="card-footer">
+        <span class="left"> $3000JMD</span>
+        <span class="right"> 
+            <a placement="top" mdbTooltip="Add to Wishlist" container="body">
+                <i class="fa fa-heart"></i>
+            </a>
+        </span>
+    </div>
+</div>
+</div>
 </div>
 
 
