added more products

--- a/drehendz/src/app/products/products.component.html
+++ b/drehendz/src/app/products/products.component.html
@@ -25,17 +25,25 @@
    <li class=" item">
 
       <div class="card">
-       <img class="card-img-top" src="../../assets/img/rhinestone1.jpg" >
+       <img class="card-img-top" src="../../assets/img/rhinestone1 resize.jpg" >
        <div class="card-body">
            
-       <h5 class="card-title">  {{item.name}}  </h5>
-       <p class="card-text">Price: {{item.price | currency: 'JMD':'code'}}  </p>
+       <h5 class="card-title"> Mesh Rhinestone  </h5>
+       <p class="card-text">Price: $3000JMD </p>
        </div>
-
        <div class="card-body">
         <button type="button" class="btn btn-success"> Add to cart </button>      
     </div>
-
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="../../assets/img/low waist triangle .jpg">
+        <div class="card-body">
+          <h5 class="card-title">Low Waist Triangle</h5>
+          <p class="card-text">Price: $3500</p>
+        </div>
+        <div class="card-body">
+          <button type="button" class="btn btn-success">Add to cart</button>
+        </div>
       </div>
 
 
