--- a/drehendz/src/app/app.component.html
+++ b/drehendz/src/app/app.component.html
@@ -2,6 +2,7 @@
 <div class ="container-fluid" [ngStyle]=" {'background-color': themeBackgroundColor} ">
 
 <header>
+    <a class="navbar-brand" href="javascript:;;">drehendz</a>
 
    <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
        <ul class="navbar-nav mr-auto">
