--- a/drehendz/src/app/app.component.html
+++ b/drehendz/src/app/app.component.html
@@ -2,6 +2,10 @@
 <div class ="container-fluid" [ngStyle]=" {'background-color': themeBackgroundColor} ">
 
 <header>
+    <a class="navbar-item">
+        <img src="../assets/logo_img/drehendz logo.png">
+    </a>
+    <br>
     <a class="navbar-brand" href="javascript:;;">drehendz</a>
 
    <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
