--- a/drehendz/src/app/user/user.component.html
+++ b/drehendz/src/app/user/user.component.html
@@ -1,3 +1,18 @@
-<p>user works!</p>
+<br>
+<br>
+
+<div class="container">
+<div class="row">
+    <div class="col-sm-4">
+        <ul class="list-group-item hoverable">
+<li class="list-group-item hoverable" >
+        <a [routerLink] = " ['/users'] ">YourProfile</a>
+
+</li>
+        </ul>
+    </div>
+</div>
+
+</div>
 <router-outlet></router-outlet>
 
