--- a/drehendz/src/app/user/user.component.html
+++ b/drehendz/src/app/user/user.component.html
@@ -14,5 +14,13 @@
 </div>
 
 </div>
+<!-- AngularJS -->
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
+
+<!-- Firebase -->
+<script src="https://www.gstatic.com/firebasejs/3.6.6/firebase.js"></script>
+
+<!-- AngularFire -->
+<script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
 <router-outlet></router-outlet>
 
