--- a/drehendz/src/app/app.component.html
+++ b/drehendz/src/app/app.component.html
@@ -25,7 +25,11 @@
    </nav>
 </header>
 <br />
-
+<ul>
+    <li class="text" *ngFor="let item of items | async">
+      {{item.name}}
+    </li>
+  </ul>
 <router-outlet></router-outlet>
 <br />
 <footer class="border-top">
