--- a/drehendz/src/app/user/sign-in/sign-in.component.html
+++ b/drehendz/src/app/user/sign-in/sign-in.component.html
@@ -1,6 +1,7 @@
 <h1>test</h1>
 <div *ngIf="auth.user$ | async as user; else login">
-    {{user | json }}
+  <pre>{{user | json }}</pre>  
+
     <hr>
     <button class="button" (click)="auth.signOut()">Sign Out</button>
 </div>
