design product html

--- a/drehendz/src/app/app.component.html
+++ b/drehendz/src/app/app.component.html
@@ -60,7 +60,7 @@
     <div class="row">
         <div class="col-md-6 offset-md-3">
           <p>
-               Copyrights &copy; 2019 drehendz. All Rights Reserved.
+               Copyrights &copy; 2019 drehendz.com  All Rights Reserved.
                <a href="">User Agreement</a>
             </p>
         </div>
