change source to scss

--- a/drehendz/src/app/products/products.component.html
+++ b/drehendz/src/app/products/products.component.html
@@ -104,6 +104,7 @@
               <div class="card-footer">
                 <span class="left">$3000</span>
                 <span class="right"> <a placement="top" mdbTooltip="Add to Wishlist"></a> </span>
+                <a placement="top" mdbTooltip="Add to Cart" container="body"></a>
               </div>
             </div>
           </div>
