--- a/drehendz/src/app/products/products.component.html
+++ b/drehendz/src/app/products/products.component.html
@@ -25,8 +25,8 @@
               <label for="product_select">Catergories:</label>
              </div>
              <ul class="list-group">
-               <li class="list-group-item">Beachwear</li>
-               <li class="list-group-item">Electronics</li>
+               <li class="list-group-item"> <a routerLink="/home" routerLinkActive="active"> Beachwear</a>   </li>
+               <li class="list-group-item"> </li>
                <li class="list-group-item">Apparel</li>
              </ul>
           </div>
