--- a/drehendz/src/app/products/products.component.html
+++ b/drehendz/src/app/products/products.component.html
@@ -26,7 +26,7 @@
              </div>
              <ul class="list-group">
                <li class="list-group-item"> <a routerLink="/home" routerLinkActive="active"> Beachwear</a>   </li>
-               <li class="list-group-item"> </li>
+               <li class="list-group-item"> Technology</li>
                <li class="list-group-item">Apparel</li>
              </ul>
           </div>
