--- a/drehendz/src/app/app.component.html
+++ b/drehendz/src/app/app.component.html
@@ -1,66 +1,16 @@
 
 
-<div class ="container-fluid" [ngStyle]=" {'background-color': themeBackgroundColor} ">
+<div class ="container">
 
-        <header>
-            <a class="navbar-item">
-                <img src="../assets/logo_img/drehendz logo.png">
-            </a>
-            <br>
-            <a class="navbar-brand" href="javascript:;;">drehendz</a>
-        
-           <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
-               <ul class="navbar-nav mr-auto">
-                   <li class="nav-item">
-                       <a class="nav-link active" href="http://localhost:4200/home" routerlink="home">Home</a>
-                   </li>
-                   <li class="nav-item">
-                       <a class="nav-link" href="http://localhost:4200/about" routerlink="about">About</a>
-                   </li>
-        
-                 <li class="nav-item">
-        <a class="nav-link" href="http://localhost:4200/products" routerlink="products">Products</a>
-        
-                 </li>  
-               </ul>
-           </nav>
-        </header>
-        <br />
-        
-        <div class="row-column">
+      
+      <app-navbar></app-navbar>
           
-        </div>
            
         
        
         
 
 <router-outlet></router-outlet>
-<br />
-<footer class="border-top">
-  <div class="quicklinks">
-      <div class="container">
-          <div class="row">
-              <div class="col-md-6">
-                  <h6>Stay Connected</h6>
-                  <a href="https://www.instagram.com/">Instagram</a>
-              </div>
-          </div>
-      </div>
-  </div>
-
-  
-
-    <div class="row">
-        <div class="col-md-6 offset-md-3">
-          <p>
-               Copyrights &copy; 2019 drehendz.com  All Rights Reserved.
-               <a href="">User Agreement</a>
-            </p>
-        </div>
-    </div>
-
-</footer>
 
 </div>
 
