--- a/drehendz/src/app/index/navbar/navbar.component.html
+++ b/drehendz/src/app/index/navbar/navbar.component.html
@@ -1,32 +1,17 @@
-<!--Navbar-->
-<nav class="navbar-brand-expand-lg navbar-dark">
+<nav class="navbar navbar-expand-lg navbar-dark">
+<a class="navbar-brand">drehendz</a>
 
-<!--Navbar brand-->
-<a class="navbar-brand" href="javascript:;;">drehendz</a>
+  
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
+aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
 
-<!--Collapse button-->
-<button class="navbar-toggler-icon" type="button" data-toggle="collapse" data-target="#basicExampleNav" aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation"> 
-
-        <span class="navbar-toggler-icon"></span>
-
-
+<span  class="navbar-toggler-icon"></span>
 </button>
 
 
-<!--Collaspible content-->
-<div class="collapse navbar-collapse" id="#basicExampleNav"></div>
 
 
-<!--Links-->
-<ul class="navbar-nav mr-auto">
-  <li class="nav-item active">
-      <a class="nav-link" href="javascript:;;" [routerLink]="[ '/' ]">Home </a>
-  </li>
-  <li class="nav-item">
-      <a class="nav-link" href="jaascript:;;" [routerLink]=" ['/products']">products</a>
-
-
-  </li>
-
-</ul> 
 </nav>
+
+
+
