--- a/drehendz/src/app/app.component.html
+++ b/drehendz/src/app/app.component.html
@@ -1,18 +1,14 @@
 
+<div class="container">
 
-<div class ="container">
-
-      
-      <app-navbar></app-navbar>
-          
-           
-        
-       
-        
-
+<app-navbar></app-navbar>
+</div>   
 <router-outlet></router-outlet>
 
-</div>
+
+<app-footer></app-footer>
+
+
 
 
 
