--- a/drehendz/src/app/index/navbar/navbar.component.html
+++ b/drehendz/src/app/index/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark">
-<a class="navbar-brand">drehendz</a>
+<a class="navbar-brand" >drehendz</a>
 
   
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
@@ -7,7 +7,34 @@ aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigat
 
 <span  class="navbar-toggler-icon"></span>
 </button>
+<div class="collapse navbar-collapse" id="basicExampleNav">
 
+
+
+<ul class="navbar-nav  ml-auto">
+    <li class="nav-item" *ngIf="authService.isLoggedIn()" >
+        <div>
+            <a class="nav-link" [routerLink]="['/users']">
+                 login
+            </a>
+        </div>
+    </li>
+    <li class="nav-item" *ngIf="!authService.isLoggedIn()">
+        <a class="nav-link" [routerLink]=" ['/login'] ">
+        <i class="fa fa-sign-in mr-1">logout</i>
+        </a>
+    </li>
+    <li class="nav item" *ngIf="authService.isLoggedIn()">
+        <a class="nav-link" (click)="logout()">
+            <i class="fa fa-sign-in mr-1"></i>
+            logout
+        </a>
+    </li>
+</ul>
+
+
+
+</div>
 
 
 
