--- a/drehendz/src/app/app.component.html
+++ b/drehendz/src/app/app.component.html
@@ -2,6 +2,7 @@
 <div class="container">
 
 <app-navbar></app-navbar>
+<!--app-loader-spinner></app-loader-spinner-->
 </div>   
 <router-outlet></router-outlet>
 
