--- a/drehendz/src/app/layouts/product/best-product/best-product.component.html
+++ b/drehendz/src/app/layouts/product/best-product/best-product.component.html
@@ -1,1 +1,55 @@
-<p>best-product works!</p>
+<section class="section pb-3">
+    
+<div class="row">
+
+
+    <div class="col-md-6">
+        <blockquote class="blockquote float-left bq-primary">
+            <h3 class="bq-title">BESTPRODUCTS</h3>
+        </blockquote>
+    </div>
+
+    <div class="col-md-6">
+        <a class="btn btn-default float-right" [routerLink]=" ['/products/all-products'] ">VIEWALL</a>
+    </div>
+</div>
+
+
+
+<owl-carousel *ngIf="!loading" [options]="options" >
+
+    <div class="item" style="padding: 20px" *ngFor="let products of bestProducts; let i = index ">
+    <div class="mb-r">
+
+        <!--Card-->
+        <div class="card card-cascade wider">
+
+
+            <!--Card image-->
+            <a [routerLink]="['/products/product', product.$key] ">
+
+                <div class="view overlay hm-white-slight">
+                    <img [src]="product.productImageURL" class="img-fluid" alt="" width="360px" height="640px">
+                    <a>
+                            <div class="mask waves-effect waves-light" mdbRippleRadius></div>
+                          </a>
+                </div>
+            </a>
+
+
+<!--Card content-->
+<div class="card-body  text-center no-padding">
+<!--Catergory & Title-->
+<a href="" class="text-muted">
+    <h5> {{product.productCatergory}}</h5>
+</a>
+
+</div>
+        </div>
+    </div>
+    </div>
+</owl-carousel>
+
+
+
+</section>
