--- a/drehendz/src/app/layouts/product/add-product/add-product.component.html
+++ b/drehendz/src/app/layouts/product/add-product/add-product.component.html
@@ -5,9 +5,27 @@
     <div class="modal-content">
         <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLongTitile">Add Product</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
-           <span aria-hidden="true">&times;</span>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+            </button>
         
+        </div>
+        <div class="modal-body">
+            <form class="needs-validation" #addProductForm="ngForm" (ngSubmit)="createProduct(addProductForm)">
+                <div class="row">
+                    <div class="col-md-6 mb-3">
+                        <label for="productName">Product Name</label>
+                        <input type="text" class="form-control" 
+                        id="productName" name="productName" 
+                        [(ngModel)]="product.productName" placeholder="Product Name" value="" required> 
+                        <div class="invalid-feedback">
+                                Valid first name is required.
+                              </div>
+                    </div>
+
+                    
+                </div>
+            </form>
         </div>
     </div>
 </div>
