--- a/drehendz/src/app/index/navbar/navbar.component.html
+++ b/drehendz/src/app/index/navbar/navbar.component.html
@@ -1,40 +1,74 @@
-<nav class="navbar navbar-expand-lg navbar-dark">
-<a class="navbar-brand" >drehendz</a>
 
-  
+<!--Navbar-->
+<nav class="navbar navbar-expand-lg navbar-dark">
+
+    <!--Navbar brand-->
+<a class="navbar-brand" href="#">drehendz</a>
+
+  <!--Collapse button-->
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
 aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
-
 <span  class="navbar-toggler-icon"></span>
 </button>
+
+<!--Collapsible content-->
 <div class="collapse navbar-collapse" id="basicExampleNav">
 
 
-
+<!--Links-->
 <ul class="navbar-nav  ml-auto">
-    <li class="nav-item" *ngIf="authService.isLoggedIn()" >
+    <li class="nav-item active">
+        <a class="nav-link" href="#" [routerLink]="['/']">
+        <span class="sr-only">Home</span>
+        </a>  
+    </li>
+    <li class="nav-item">
+            <a class="nav-link" href="jaascript:;;" [routerLink]="[ '/products/all-products' ]">Products
+              </a>
+          </li>        
+</ul>
+
+<!--Links-->
+
+<ul class="navbar-nav ml-auto">
+    <li class="nav-item">
         <div>
-            <a class="nav-link" [routerLink]="['/users']">
-                 login
+            <a class="nav-link" href="#" [routerLink]="['/products/favourite-products']">
+            <i class="fa fa-heart">
+                <span class="mt-2">   </span>
+            </i>
             </a>
         </div>
     </li>
-    <li class="nav-item" *ngIf="!authService.isLoggedIn()">
-        <a class="nav-link" [routerLink]=" ['/login'] ">
-        <i class="fa fa-sign-in mr-1">logout</i>
-        </a>
+
+    <li class="nav-item">
+            <div>
+                    <a class="nav-link" href="javascript:;;" [routerLink]="['/products/cart-items']">
+                      <i class="fa fa-shopping-cart">
+                        <span class="mt-2"> </span>
+                      </i>
+                    </a>
+                  </div>
     </li>
-    <li class="nav item" *ngIf="authService.isLoggedIn()">
-        <a class="nav-link" (click)="logout()">
-            <i class="fa fa-sign-in mr-1"></i>
-            logout
-        </a>
-    </li>
+
+    <li class="nav-item" *ngIf="authService.isLoggedIn()">
+            <a class="nav-link" [routerLink]="['/users']">
+              <i class="fa fa-user mr-1"></i> MY ACCOUNT  </a>
+          </li>
+          <li class="nav-item" *ngIf="!authService.isLoggedIn()">
+                <a class="nav-link" [routerLink]="[ '/login' ]">
+                  <i class="fa fa-sign-in mr-1"></i> SIGNIN </a>
+              </li>
+
+              <li class="nav-item" *ngIf="authService.isLoggedIn()">
+                    <a class="nav-link" (click)="logout()">
+                      <i class="fa fa-sign-in mr-1"></i>LOGOUT</a>
+         </li>
+        
 </ul>
 
-
-
 </div>
+
 
 
 
