--- a/drehendz/src/app/index/login/login.component.html
+++ b/drehendz/src/app/index/login/login.component.html
@@ -32,7 +32,9 @@ placeholder="Password">
 
 <div class="text-center">
 
-    <button type="submit" class="btn btn-primary waves-light" id="loginButton">Login</button> 
+    <button type="submit" class="btn btn-primary waves-light" id="loginButton"  mdbRippleRadius >Login</button> 
+
+
 
     <button type="button" class="btn waves-light" (click)="signInWithGoogle()" style="background-color: #dd4b39">
         <i class="fa fa-google" aria-hidden="true"></i>
