--- a/drehendz/src/app/index/navbar/navbar.component.scss
+++ b/drehendz/src/app/index/navbar/navbar.component.scss
@@ -13,30 +13,30 @@
     width: 36px;
     height: 36px;
     margin: auto;
-    border-radius: 50;
+    border-radius: 50%;
     overflow: hidden;
 
     .colorDiv {
         position: absolute;
         top: 0;
         left: 0;
-        width: 100;
-        height: 100;
+        width: 100%;
+        height: 100%;
         box-sizing: border-box;
-        border-radius: 50;
+        border-radius: 50%;
 
     }
     .color-purple{
-        background: #666666
+        background: #9c27b0
     }
     .color-red{
-        background: #444444
+        background: #e91e63
     }
     .color-blue{
-        background: #9c9c9c
+        background: #3f51b5
     }
     .color-violet{
-     background: #7b7b7b
+     background: #673ab7
     }
 
 }
