--- a/drehendz/src/app/layouts/product/favorite-products/favorite-products.component.html
+++ b/drehendz/src/app/layouts/product/favorite-products/favorite-products.component.html
@@ -17,10 +17,44 @@
      </a>
     </div>
     </a>
+
+    <!--/.Card image-->
+
+    <!--Card content-->
+<div class="card-body tect-center no-padding">
+    <a class="text-muted">
+        <h5> {{product.productCatergory}}</h5>
+    </a>
+    <h5 class="card-title">
+        <strong>
+            <a [routerLink]="['/products/product',product.$key]"> {{product.productName}}  </a> 
+        </strong>
+    </h5>
+    <p 
+    class="card-text">{{ product.productDescription }}
+  </p>
+  <!--Card footer-->
+  <div class="card-footer">
+        <span class="left">₹ {{ product.productPrice }}</span>
+        <span class="right">
+          <a placement="top" mdbTooltip="Quick Look" container="body" [routerLink]="['/products/product', product.$key]">
+            <i class="fa fa-eye"></i>
+          </a>
+          <a placement="top" mdbTooltip="Remove Product" container="body" (click)="removeFavourite(product)">
+            <i class="fa fa-trash"></i>
+          </a>
+        </span>
+      </div>
+</div>
+
 </div>
 
                 </div>
             </div>
         </div>
     </div>
+</div>
+
+<div class="container" *ngIf="favoruiteProducts.length === 0">
+        <!--app-no-products-found [title]="messageTitle" [description]="messageDescription"--><!--/app-no-products-found-->
 </div>
