--- a/drehendz/src/app/layouts/product/add-product/add-product.component.html
+++ b/drehendz/src/app/layouts/product/add-product/add-product.component.html
@@ -25,6 +25,8 @@
                   
 
                 </div>
+                <hr class="mb-4">
+                <button class="btn btn-primary btn-lg btn-block" type="submit">Add Product</button>
             </form>
         </div>
     </div>
