--- a/drehendz/src/app/layouts/product/cart-products/cart-products.component.html
+++ b/drehendz/src/app/layouts/product/cart-products/cart-products.component.html
@@ -1,1 +1,70 @@
-<p>cart-products works!</p>
+<br>
+<div class="container" *ngIf="cartProducts.length>0">
+    <div class="row">
+
+        <!--List Products-->
+        <div class="col-8">
+            <div class="row">
+                <div class="col-4" *ngFor="let product of cartProducts">
+                    <div class="item">
+                        <div class="mb-r">
+
+
+
+                       <!--Card-->
+                       <div class="card card-cascade wider">
+
+<!--Card Image-->
+      <a [routerLink]="['/products/product', product.$key]">
+    
+       <div class="view overlat hm-white-slight">
+           <img [src]="product.productImageUrl" class="img-fluid" alt="" width="360px" height="640px">
+           <a>
+                <div class="mask waves-effect waves-light" mdbRippleRadius></div>
+              </a>
+       </div>
+    </a>  
+
+
+    <!--Card content-->
+    <div class="card-body text-center no-padding">
+            <a class="text-muted">
+                    <h5>{{ product.productCategory }}</h5>
+                  </a>
+                  <h5 class="card-title">
+                        <strong>
+                          <a [routerLink]="['/products/product', product.$key]">{{ product.productName }}</a>
+                        </strong>
+                      </h5>
+
+                      <!--Description-->
+                      <p class="card-text">{{ product.productDescription }}
+                        </p>
+
+                        <div class="card-footer">
+                                <span class="left">₹ {{ product.productPrice }}</span>
+                                <span class="right">
+                                  <a placement="top" mdbTooltip="Quick Look" container="body" [routerLink]="['/products/product', product.$key]">
+                                    <i class="fa fa-eye"></i>
+                                  </a>
+                                  <a placement="top" mdbTooltip="Remove Product" container="body" (click)="removeCartProduct(product)">
+                                    <i class="fa fa-trash"></i>
+                                  </a>
+                                </span>
+                              </div>
+
+    </div>
+                       </div>
+
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+        <div class="col-4">
+                <app-cart-calculator [products]="cartProducts"></app-cart-calculator>
+              </div>
+    </div>
+</div>
