--- a/drehendz/src/app/shared/components/card-loader/card-loader.component.html
+++ b/drehendz/src/app/shared/components/card-loader/card-loader.component.html
@@ -1,5 +1,7 @@
 <div class="row">
-    <div class="col-3" >
-
-    </div>
-</div>
+        <div class="col-3" *ngFor="let number of arrayOne(loop)">
+          <ngx-content-loading [height]="height">
+            <svg:g ngx-instagram-preset></svg:g>
+          </ngx-content-loading>
+        </div>
+      </div>
