--- a/drehendz/src/app/app.component.html
+++ b/drehendz/src/app/app.component.html
@@ -2,6 +2,9 @@
 <div class="container">
 
 <app-navbar></app-navbar>
+<main [@fadeAnimation]="o.isActivated ? o.activatedRoute : ''">
+        <router-outlet #o="outlet"></router-outlet>
+      </main>
 <!--app-loader-spinner></app-loader-spinner-->
 </div>   
 <router-outlet></router-outlet>
