--- a/drehendz/src/assets/theme/color.scss
+++ b/drehendz/src/assets/theme/color.scss
@@ -1,22 +1,8 @@
-.purple-theme {
-    --navBackground: #9c27b0;
-    --productTitle: #9c27b0;
-}
 
-.blue-theme {
-
-    --navBackground: #3f51b5;
-    --productTitle: #3f51b5;
-}
 
 .red-theme {
-    --navBackground: #e91e63;
-    --productTitle: #e91e63;
-}
-
-.violet-theme {
-    --navBackground: #673ab7;
-    --productTitle: #673ab7;
+    --navBackground: #5c55b4;
+    --productTitle: #1e32e9;
 }
 
 
