--- a/drehendz/src/app/layouts/product/product-list/product-list.component.html
+++ b/drehendz/src/app/layouts/product/product-list/product-list.component.html
@@ -28,19 +28,21 @@
         <div class="col-md-9">
 
        <div class="container">
-           <div class="row">
+           <app-card-loader [loop]="3" [height]="800" *ngIf="loading"></app-card-loader>
+           <div class="row" *ngIf="!loading">
                <!--List of Products-->
-               <div class="col-sm-4 mb-2" >
+               <div class="col-sm-4 mb-2" *ngFor="let product of productList | filterByBrand: selectedBrand | paginate: { itemsPerPage: 6, currentPage: page } " >
                    <div class="item">
                        <div class="mb-r">
                            <!--Card-->
                            <div class="card card-cascade wider">
                                <!--Card Image-->
-                               <a [routerLink]=" ['/products/product',product.$key]">
-                                <div class="view overlay hm-white-slight">
-                                    <img [src]="product.productImageURL" class="img-fluid" alt="" width="360px" height="640px"> 
-                                </div>
+                               <a [routerLink]="['/products/product', product.$key]">
+                            <div class="view overlay hm-white-slight">
+                                <img [src]="product.productImgUrl" class="img-fluid" alt="" width="360px" height="640px">
+                            </div>
                             </a>
+                               
                             <a>
                                     <div class="mask waves-effect waves-light" mdbRippleRadius></div>
                             </a>
@@ -50,21 +52,22 @@
                             <div class="card-body trext-center no-padding">
                                 <!--Catergory & Title-->
                                 <a class="text-muted">
-                                    <h5> {{product.productCatergory}}  </h5>
+                                  <h5>{{ product.productCategory }}</h5>
                                 </a>
                                 <p class="card-title">
-                                    <strong>
-                                        <a [routerLink]="['/products/product', product.$key]" routerLinkActive="router-link-active"> {{product.productName}} </a>
+                                        <strong>
+                                       <a [routerLink]="['/products/product', product.$key]" routerLinkActive="router-link-active">
+                                        {{product.productName }}</a>
                                     </strong>
                                 </p>
 
                                 <!--Description-->
                                 <p class="card-text">
-                                    {{ product.productDescription }} 
+                                  {{ product.productDescription }}
                                 </p>
                                     <!--Card footer-->
                                     <div class="card-footer">
-                                        <span class="left">$ {{product.productPrice}} </span>
+                                      <span class="left">$ {{ product.productPrice }}</span>
                                         <span class="right">
                                             <a placement="top" mdbTooltip="Add to Wishlist" container="body" (click)="addFavourite(product) " >
                                                 <i class="fa fa-heart"></i>
