--- a/drehendz/src/app/index/navbar/navbar.component.html
+++ b/drehendz/src/app/index/navbar/navbar.component.html
@@ -18,8 +18,8 @@ aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigat
 <!--Links-->
 <ul class="navbar-nav  ml-auto">
     <li class="nav-item active">
-        <a class="nav-link" href="#" [routerLink]="['/']">
-        <span class="sr-only">Home</span>
+        <a class="nav-link" href="#" [routerLink]="['/']"> {{Home}}
+        <span class="sr-only">(current) </span>
         </a>  
     </li>
     <li class="nav-item">
