--- a/drehendz/src/app/app.component.html
+++ b/drehendz/src/app/app.component.html
@@ -5,12 +5,12 @@
 <main [@fadeAnimation]="o.isActivated ? o.activatedRoute : ''">
         <router-outlet #o="outlet"></router-outlet>
       </main>
-<!--app-loader-spinner></app-loader-spinner-->
 </div>   
 <router-outlet></router-outlet>
 
 
 <app-footer></app-footer>
+<app-loader-spinner></app-loader-spinner>
 
 
 
