remove toastr service notificatication

--- a/drehendz/src/app/index/login/login.component.html
+++ b/drehendz/src/app/index/login/login.component.html
@@ -50,7 +50,7 @@ placeholder="Password">
 <br>
   <p>
       New User ?
-      <a data-toggle="modal" data-target="#createUserForm" style="color:dodgerblue">Register here </a>
+      <a    data-toggle="modal" data-target="#createUserForm" style="color:dodgerblue"> Register Here</a>
   </p>
  
 <!--Login Form-->
