--- a/drehendz/src/app/layouts/product/cart-products/cart-products.component.html
+++ b/drehendz/src/app/layouts/product/cart-products/cart-products.component.html
@@ -64,7 +64,7 @@
             
         </div>
         <div class="col-4">
-                <!--app-cart-calculator [products]="cartProducts" ></app-cart-calculator-->
+                <app-cart-calculator [products]="cartProducts" ></app-cart-calculator>
               </div>
     </div>
 </div>
