--- a/drehendz/src/app/layouts/product/best-product/best-product.component.html
+++ b/drehendz/src/app/layouts/product/best-product/best-product.component.html
@@ -5,7 +5,7 @@
 
     <div class="col-md-6">
         <blockquote class="blockquote float-left bq-primary">
-            <h3 class="bq-title">BESTPRODUCTS</h3>
+            <h3 class="bq-title"> BESTPRODUCTS </h3>
         </blockquote>
     </div>
 
@@ -14,10 +14,63 @@
     </div>
 </div>
 
+<div *ngIf="loading">
+        <app-card-loader [loop]="4" [height]="500"></app-card-loader>
+      </div>
 
-
-
-
+      <owl-carousel *ngIf="!loading" [options]="options" [items]="bestProducts" [carouselClasses]="['owl-theme', 'row', 'sliding']">
+            <!--First column-->
+            <div class="item" style="padding:20px" *ngFor="let product of bestProducts;let i = index">
+              <div class=" mb-r">
+        
+                <!--Card-->
+                <div class="card card-cascade wider">
+        
+                  <!--Card image-->
+                  <a [routerLink]="['/products/product', product.$key]">
+                    <div class="view overlay hm-white-slight">
+                      <img [src]="product.productImageUrl" class="img-fluid" alt="" width="360px" height="640px">
+                      <a>
+                        <div class="mask waves-effect waves-light" mdbRippleRadius></div>
+                      </a>
+                    </div>
+                  </a>
+                  <!--/.Card image-->
+        
+                  <!--Card content-->
+                  <div class="card-body text-center no-padding">
+                    <!--Category & Title-->
+                    <a href="" class="text-muted">
+                      <h5>{{ product.productCategory }}</h5>
+                    </a>
+                    <h5 class="card-title">
+                      <strong>
+                        <a [routerLink]="['/products/product', product.$key]">{{ product.productName }}</a>
+                      </strong>
+                    </h5>
+        
+                    <!--Description-->
+                    <p class="card-text">{{ product.productDescription }}
+                    </p>
+        
+                    <!--Card footer-->
+                    <div class="card-footer">
+                      <span class="left">${{ product.productPrice }}</span>
+                      <span class="right">
+                        <a placement="top" mdbTooltip="Add to Wishlist" container="body">
+                          <i class="fa fa-heart"></i>
+                        </a>
+                      </span>
+                    </div>
+                  </div>
+                  <!--/.Card content-->
+                </div>
+                <!--/.Card-->
+              </div>
+              <!--/First column-->
+            </div>
+          </owl-carousel>
+     
 
 
 </section>
