--- a/drehendz/src/app/layouts/product/checkout/result/result.component.html
+++ b/drehendz/src/app/layouts/product/checkout/result/result.component.html
@@ -9,7 +9,7 @@
                 <address>
                   <strong>drehendz</strong>
                   <br>
-                  Tamil Nadu, IN 600094
+                 Kensignton, JMD 7664
                   <br>
                   <abbr title="Phone">P:</abbr> (+91) 8124794942
                 </address>
