--- a/drehendz/src/styles.scss
+++ b/drehendz/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 @import "./assets/theme/color.scss";
 @import "./assets/theme/function.scss"; 
-@import url("https://unpkg.com/bootstrap@4.0.0-beta.2/dist/css/bootstrap.min.css")
+@import url("https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css")
+
